[gd_scene load_steps=52 format=3 uid="uid://c0vnqt6uyxaoa"]

[ext_resource type="Script" path="res://player/Player.gd" id="1"]
[ext_resource type="PackedScene" path="res://player/ControllableCamera.tscn" id="2"]
[ext_resource type="PackedScene" uid="uid://e2bccij4j7ud" path="res://player/Controls.tscn" id="3"]
[ext_resource type="Script" path="res://scripts/StateMachine.gd" id="4"]
[ext_resource type="Script" path="res://player/states/Stopped.gd" id="5"]
[ext_resource type="Script" path="res://player/states/Running.gd" id="6"]
[ext_resource type="Script" path="res://player/states/Jumping.gd" id="7"]
[ext_resource type="Script" path="res://player/states/Dashing.gd" id="8"]
[ext_resource type="Script" path="res://player/states/OnGround.gd" id="9"]
[ext_resource type="Script" path="res://player/states/InAir.gd" id="10"]
[ext_resource type="Script" path="res://player/states/Falling.gd" id="11"]
[ext_resource type="Script" path="res://player/states/Crouching.gd" id="12"]
[ext_resource type="PackedScene" path="res://player/PlayerDoll.tscn" id="13"]
[ext_resource type="Script" path="res://player/states/Swimming.gd" id="14"]
[ext_resource type="Script" path="res://player/states/OnSurface.gd" id="15"]
[ext_resource type="Script" path="res://player/states/Underwater.gd" id="16"]
[ext_resource type="Script" path="res://player/states/Diving.gd" id="17"]
[ext_resource type="Script" path="res://player/states/Surging.gd" id="18"]

[sub_resource type="SphereShape3D" id="21"]

[sub_resource type="CylinderShape3D" id="22"]
height = 0.173798
radius = 0.419353

[sub_resource type="AnimationNodeAnimation" id="14"]
animation = &"crouch-idle"

[sub_resource type="AnimationNodeAnimation" id="15"]
animation = &"crouch-walk"

[sub_resource type="AnimationNodeBlendSpace1D" id="30"]
blend_point_0/node = SubResource("14")
blend_point_0/pos = 0.0
blend_point_1/node = SubResource("15")
blend_point_1/pos = 0.3

[sub_resource type="AnimationNodeAnimation" id="41"]
animation = &"fall"

[sub_resource type="AnimationNodeAnimation" id="42"]
animation = &"idle-to-jump"

[sub_resource type="AnimationNodeAnimation" id="43"]
animation = &"fall-to-land"

[sub_resource type="AnimationNodeBlendSpace1D" id="31"]
blend_point_0/node = SubResource("41")
blend_point_0/pos = 0.0
blend_point_1/node = SubResource("42")
blend_point_1/pos = 0.3
blend_point_2/node = SubResource("43")
blend_point_2/pos = -0.3

[sub_resource type="AnimationNodeAnimation" id="32"]
animation = &"idle"

[sub_resource type="AnimationNodeAnimation" id="33"]
animation = &"run"

[sub_resource type="AnimationNodeBlendSpace1D" id="34"]
blend_point_0/node = SubResource("32")
blend_point_0/pos = 0.0
blend_point_1/node = SubResource("33")
blend_point_1/pos = 0.3

[sub_resource type="AnimationNodeTransition" id="35"]
enabled_inputs = 5
xfade_time = 0.2
input_0/name = "on-ground"
input_0/auto_advance = false
input_1/name = "in-air"
input_1/auto_advance = false
input_2/name = "crouching"
input_2/auto_advance = false
input_3/name = "swimming"
input_3/auto_advance = false
input_4/name = "surging"
input_4/auto_advance = false

[sub_resource type="AnimationNodeAnimation" id="48"]
animation = &"surging"

[sub_resource type="AnimationNodeAnimation" id="49"]
animation = &"surging-forward"

[sub_resource type="AnimationNodeBlendSpace1D" id="47"]
blend_point_0/node = SubResource("48")
blend_point_0/pos = 0.0
blend_point_1/node = SubResource("49")
blend_point_1/pos = 0.3

[sub_resource type="AnimationNodeAnimation" id="45"]
animation = &"swimming-idle"

[sub_resource type="AnimationNodeAnimation" id="46"]
animation = &"swimming-forward"

[sub_resource type="AnimationNodeBlendSpace1D" id="44"]
blend_point_0/node = SubResource("45")
blend_point_0/pos = 0.0
blend_point_1/node = SubResource("46")
blend_point_1/pos = 0.4

[sub_resource type="AnimationNodeBlendTree" id="36"]
graph_offset = Vector2(-786, -36)
nodes/Crouching/node = SubResource("30")
nodes/Crouching/position = Vector2(-360, 260)
nodes/InAir/node = SubResource("31")
nodes/InAir/position = Vector2(-360, 120)
nodes/OnGround/node = SubResource("34")
nodes/OnGround/position = Vector2(-360, -20)
nodes/RootState/node = SubResource("35")
nodes/RootState/position = Vector2(-20, 140)
nodes/Surging/node = SubResource("47")
nodes/Surging/position = Vector2(-360, 540)
nodes/Swimming/node = SubResource("44")
nodes/Swimming/position = Vector2(-360, 400)
node_connections = [&"output", 0, &"RootState", &"RootState", 0, &"OnGround", &"RootState", 1, &"InAir", &"RootState", 2, &"Crouching", &"RootState", 3, &"Swimming", &"RootState", 4, &"Surging"]

[sub_resource type="StandardMaterial3D" id="16"]
transparency = 1
blend_mode = 1
cull_mode = 2
shading_mode = 0
vertex_color_use_as_albedo = true

[sub_resource type="Gradient" id="19"]
offsets = PackedFloat32Array(0.038, 0.483, 0.908)
colors = PackedColorArray(1, 0.654902, 0, 1, 1, 0.945098, 0.152941, 1, 1, 0.988235, 0.827451, 0)

[sub_resource type="GradientTexture2D" id="20"]
gradient = SubResource("19")

[sub_resource type="ParticleProcessMaterial" id="17"]
emission_shape = 3
emission_box_extents = Vector3(0.281, 0.524, 0)
direction = Vector3(0, 0, 1)
spread = 0.0
gravity = Vector3(0, 0, 0)
color_ramp = SubResource("20")

[sub_resource type="BoxMesh" id="18"]
size = Vector3(0.04, 0.04, 2)

[sub_resource type="Gradient" id="23"]
offsets = PackedFloat32Array(0, 0.365079, 0.555556, 0.767196)
colors = PackedColorArray(0, 0.294118, 1, 1, 0.0235294, 0.505882, 0.992157, 1, 0.498039, 1, 0.941176, 1, 0.498039, 1, 0.941176, 0)

[sub_resource type="GradientTexture2D" id="24"]
gradient = SubResource("23")

[sub_resource type="Curve" id="25"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.34434, 1), 0.0, 0.0, 0, 0, Vector2(0.834906, 0), -4.81818, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="26"]
curve = SubResource("25")

[sub_resource type="ParticleProcessMaterial" id="27"]
direction = Vector3(0, 0, 1)
spread = 15.0
flatness = 0.38
gravity = Vector3(0, 0, 0)
initial_velocity_min = 1.0
initial_velocity_max = 3.0
scale_curve = SubResource("26")
color = Color(1, 1, 1, 0.537255)
color_ramp = SubResource("24")

[sub_resource type="StandardMaterial3D" id="28"]
transparency = 1
blend_mode = 1
shading_mode = 0
vertex_color_use_as_albedo = true

[sub_resource type="SphereMesh" id="29"]
material = SubResource("28")
radius = 0.1
height = 0.2

[sub_resource type="CapsuleShape3D" id="37"]
radius = 0.3
height = 1.8

[node name="Player" type="CharacterBody3D" groups=["player"]]
script = ExtResource("1")

[node name="DeepWaterDetector" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
collision_layer = 0
collision_mask = 4

[node name="CollisionShape3D" type="CollisionShape3D" parent="DeepWaterDetector"]
shape = SubResource("21")

[node name="WaterSurfaceDetector" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.15803, 0)
collision_layer = 2
collision_mask = 4

[node name="CollisionShape3D" type="CollisionShape3D" parent="WaterSurfaceDetector"]
shape = SubResource("22")

[node name="Skin" type="Node3D" parent="."]

[node name="PlayerDoll" parent="Skin" instance=ExtResource("13")]
transform = Transform3D(-1, 0, -1.50996e-07, 0, 1, 0, 1.50996e-07, 0, -1, 0, 0, 0)

[node name="Skeleton3D" parent="Skin/PlayerDoll/Armature" index="0"]
bones/0/position = Vector3(3.8229e-16, 0.74144, -7.45058e-09)
bones/0/rotation = Quaternion(0.0417067, 5.6786e-08, 2.97969e-09, 0.99913)
bones/1/rotation = Quaternion(-0.0380324, -1.78703e-08, -3.93759e-09, 0.999277)
bones/2/rotation = Quaternion(-0.0735745, -7.0955e-09, -4.3965e-09, 0.99729)
bones/3/rotation = Quaternion(0.0851626, 2.7757e-08, 6.33819e-09, 0.996367)
bones/4/rotation = Quaternion(0.0571456, 0.0463842, -0.820855, 0.566374)
bones/5/rotation = Quaternion(0.0906709, 0.0806003, -0.436425, 0.891524)
bones/6/rotation = Quaternion(0.014087, 0.0753545, -0.0902178, 0.992967)
bones/7/rotation = Quaternion(0.0571456, -0.0463842, 0.820855, 0.566374)
bones/8/rotation = Quaternion(0.090671, -0.0806002, 0.436425, 0.891524)
bones/9/rotation = Quaternion(0.014087, -0.0753545, 0.0902178, 0.992967)
bones/10/rotation = Quaternion(-0.347416, 0.0548694, 0.93381, -0.0655035)
bones/11/rotation = Quaternion(-0.0522889, 0.000293806, -0.0505094, 0.997354)
bones/12/rotation = Quaternion(0.347415, 0.0548685, 0.93381, 0.0655032)
bones/13/rotation = Quaternion(-0.052287, -0.000293851, 0.0505076, 0.997354)
bones/14/position = Vector3(0.145041, 0.365965, 0.213141)
bones/14/rotation = Quaternion(-0.0445733, 0.705701, 0.705701, -0.0445733)
bones/15/position = Vector3(0.156578, 0.0297348, -0.00414813)
bones/16/position = Vector3(-0.145041, 0.365965, 0.213141)
bones/16/rotation = Quaternion(0.0445733, 0.705701, 0.705701, 0.0445733)
bones/17/position = Vector3(-0.156578, 0.0297348, -0.00414813)

[node name="AnimationTree" type="AnimationTree" parent="Skin"]
tree_root = SubResource("36")
anim_player = NodePath("../PlayerDoll/AnimationPlayer")
active = true
parameters/Crouching/blend_position = 0
parameters/InAir/blend_position = 0
parameters/OnGround/blend_position = 0.0
parameters/RootState/current = 0
parameters/Surging/blend_position = 0.0
parameters/Swimming/blend_position = 0.0

[node name="VfxDash" type="GPUParticles3D" parent="Skin"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.984, 1.12412)
material_override = SubResource("16")
emitting = false
amount = 16
lifetime = 0.3
one_shot = true
explosiveness = 1.0
randomness = 0.34
visibility_aabb = AABB(-1.39, -2.508, -3.479, 2.781, 5.015, 6.958)
process_material = SubResource("17")
draw_pass_1 = SubResource("18")

[node name="VfxSurge" type="GPUParticles3D" parent="Skin"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.01641, 0)
emitting = false
amount = 16
lifetime = 0.6
one_shot = true
randomness = 1.0
visibility_aabb = AABB(-2, -1.21914, -3, 4, 2.43828, 6)
process_material = SubResource("27")
draw_pass_1 = SubResource("29")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, -4.37114e-09)
shape = SubResource("37")

[node name="CamRoot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.1, 0)

[node name="ControllableCamera" parent="CamRoot" instance=ExtResource("2")]

[node name="Controls" parent="." instance=ExtResource("3")]

[node name="Movement" type="Node" parent="."]
script = ExtResource("4")
initial_state = NodePath("OnGround")

[node name="Crouching" type="Node" parent="Movement"]
script = ExtResource("12")

[node name="Stopped" type="Node" parent="Movement/Crouching"]
script = ExtResource("5")

[node name="Moving" type="Node" parent="Movement/Crouching"]
script = ExtResource("6")
move_speed = 4.0
sprint_speed = 4.0
turn_speed = 8.0
acceleration = 30.0
cam_follow_speed = 4.0

[node name="OnGround" type="Node" parent="Movement"]
script = ExtResource("9")

[node name="Stopped" type="Node" parent="Movement/OnGround"]
script = ExtResource("5")

[node name="Running" type="Node" parent="Movement/OnGround"]
script = ExtResource("6")

[node name="Dashing" type="Node" parent="Movement/OnGround"]
script = ExtResource("8")

[node name="InAir" type="Node" parent="Movement"]
script = ExtResource("10")

[node name="Falling" type="Node" parent="Movement/InAir"]
script = ExtResource("11")

[node name="Jumping" type="Node" parent="Movement/InAir"]
script = ExtResource("7")

[node name="Dashing" type="Node" parent="Movement/InAir"]
script = ExtResource("8")
dash_power = 40.0

[node name="Swimming" type="Node" parent="Movement"]
script = ExtResource("14")

[node name="Diving" type="Node" parent="Movement/Swimming"]
script = ExtResource("17")

[node name="OnSurface" type="Node" parent="Movement/Swimming"]
script = ExtResource("15")

[node name="Underwater" type="Node" parent="Movement/Swimming"]
script = ExtResource("16")

[node name="Surging" type="Node" parent="Movement/Swimming"]
script = ExtResource("18")

[connection signal="area_entered" from="DeepWaterDetector" to="." method="_on_DeepWaterDetector_area_entered"]
[connection signal="area_exited" from="DeepWaterDetector" to="." method="_on_DeepWaterDetector_area_exited"]
[connection signal="area_entered" from="WaterSurfaceDetector" to="." method="_on_WaterSurfaceDetector_area_entered"]
[connection signal="area_exited" from="WaterSurfaceDetector" to="." method="_on_WaterSurfaceDetector_area_exited"]

[editable path="Skin/PlayerDoll"]
